--- a/devel/test_dataloader.ipynb
+++ b/devel/test_dataloader.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils import create_dataloader, create_weighted_dataloader\n"
+    "from ..utils import create_dataloader, create_weighted_dataloader\n"
    ]
   },
   {
